# tq_chatbot

./: .env.example  .gitignore  CLAUDE.md  Dockerfile.api  Makefile  Makefile.txt  README.md  docker-compose.yml  main.py  pyproject.toml  skills-lock.json
apps/api/: datos_estructurados.json  main.py  schemas.py
apps/api/core/: config.py  db.py
apps/api/graph/: __init__.py  build.py  llm.py  nodes.py  state.py
apps/api/llm/: ollama_client.py
apps/api/rag/: corpus_stats.py  embeddings.py  langchain_retriever.py  prompt.py  retriever.py
apps/api/routers/: chat.py  chat_v2.py  health.py  threads.py
apps/api/tools/: structured_tool.py
docs/: ARCHITECTURE.md
frontend/: .gitignore  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  tailwind.config.ts  tsconfig.json  tsconfig.tsbuildinfo
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/components/: ChatShell.tsx  Composer.tsx  Messages.tsx  MyRuntimeProvider.tsx  SettingsPanel.tsx  SourcesFooter.tsx  Thread.tsx  ThreadList.tsx
frontend/lib/: activeThreadIdStore.ts  api.ts  messages.ts  pendingResponseStore.ts  runtimeScopeStore.ts  settingsStore.ts  sourcesStore.ts  sse.ts  threadHistoryAdapter.ts  threadHydrationStore.ts  threadListAdapter.tsx  tqChatAdapter.ts  types.ts
frontend/widget/: widget.css  widget.js
integrated-chat/: CLAUDE.md  KNOWN_ISSUES.md  README.md  SPEC.md
integrated-chat/component/: chat-widget.js  index.js  styles.css
integrated-chat/demo/: historia.html  index.html  sitemap.xml  sostenibilidad.html  vademecum.html
integrated-chat/extension/: background.js  content.js  manifest.json
migrations/: 001_init.sql  002_conversations.sql
scripts/: fetch_sitemaps.py  ingest_to_rag.py  reset_rag.py  tqfarma_news.py
tq_chatbot/: Instruccion Para Ejecutar Proyecto.md  app.py  chunks.json  config.yaml  datos_estructurados.json  index_manifest.json  knowledge_base.py  knowledge_base.txt  qa_system.py  raw_data.json  requirements.txt  scraper.py
tq_chatbot/faiss_corporativo/: index.faiss  index.pkl
tq_chatbot/faiss_medico/: index.pkl
(+7 files in other folders)
