[project]
name = "tq-chatbot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "beautifulsoup4>=4.14.3",
    "google-generativeai>=0.8.6",
    "langchain-core>=1.3.2",
    "langchain-google-genai>=4.2.2",
    "python-dotenv>=1.2.2",
    "requests>=2.33.1",
    "selenium>=4.43.0",
    "streamlit>=1.57.0",
    "webdriver-manager>=4.0.2",
]
