[project]
name = "tq-chatbot"
version = "0.1.0"
description = "RAG chatbot sobre Tecnoquímicas — FastAPI + Qwen3 + pgvector"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "asyncpg>=0.29.0",
    "pgvector>=0.3.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "tenacity>=9.0.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
]

[project.optional-dependencies]
# Backend alternativo de embeddings cuando Ollama no tiene el tag de Qwen3-Embedding.
local-embed = [
    "sentence-transformers>=3.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.uv]
dev-dependencies = []
