[project]
name = "tq-chatbot"
version = "0.1.0"
description = "RAG chatbot sobre Tecnoquímicas — FastAPI + Qwen3 + Chroma"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.9.0",
    "pydantic-settings>=2.5.0",
    "asyncpg>=0.29.0",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.0",
    "langchain-text-splitters>=0.3.0",
    "langchain-community>=0.2.0",
    "chromadb>=0.5.0",
    "tenacity>=9.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["apps"]

[tool.uv]
dev-dependencies = []
